package Ex_8_2;

public interface ReaderInterface {
    public boolean hasNext();
    public String next();
}
